--- a/forum-center/src/main/webapp/pages/user/myartic.html
+++ b/forum-center/src/main/webapp/pages/user/myartic.html
@@ -35,8 +35,8 @@
                      <el-table-column prop="num" label="点击量" align="center"></el-table-column>
                      <el-table-column label="状态" align="center">
                          <template slot-scope="scope">
-                             <span>{{ scope.row.status == '0' ? '审核中':scope.row.status == '1' ? '已发布' : scope.row.status == '2' ? '草稿箱':
-                                 scope.row.status == '3'? '发布失败':'未发布'}}</span>
+                             <span>{{ scope.row.status == '1' ? '审核中':scope.row.status == '2' ? '已发布' : scope.row.status == '3' ? '草稿箱':
+                                 scope.row.status == '4'? '发布失败':'定时发布'}}</span>
                          </template>
                      </el-table-column>
                      <el-table-column prop="pubTime" label="发布时间" align="center"></el-table-column>
@@ -49,8 +49,8 @@
                      </el-table-column>
                  </el-table>
              </el-tab-pane>
-             <el-tab-pane  label="审核中" name="second">
-                 <el-table size="small" current-row-key="id" :data="checkDataList" stripe highlight-current-row>
+             <el-tab-pane  label="审核中" name="second" @click="handle(1)">
+                 <el-table size="small" current-row-key="id" :data="checkList" stripe highlight-current-row>
                      <el-table-column  class="ax" type="index" align="center" label="序号"></el-table-column>
                      <el-table-column prop="title" label="标题" align="center"></el-table-column>
                      <el-table-column prop="num" label="点击量" align="center"></el-table-column>
@@ -70,7 +70,7 @@
                  </el-table>
              </el-tab-pane>
              <el-tab-pane label="已发布" name="third">
-                 <el-table size="small" current-row-key="id" :data="finishDataList" stripe highlight-current-row>
+                 <el-table size="small" current-row-key="id" :data="finishList" stripe highlight-current-row>
                      <el-table-column type="index" align="center" label="序号"></el-table-column>
                      <el-table-column prop="title" label="标题" align="center"></el-table-column>
                      <el-table-column prop="num" label="点击量" align="center"></el-table-column>
@@ -90,7 +90,7 @@
                  </el-table>
              </el-tab-pane>
              <el-tab-pane label="草稿箱" name="fourth">
-                 <el-table size="small" current-row-key="id" :data="draftsDataList" stripe highlight-current-row>
+                 <el-table size="small" current-row-key="id" :data="draftsList" stripe highlight-current-row>
                      <el-table-column type="index" align="center" label="序号"></el-table-column>
                      <el-table-column prop="title" label="标题" align="center"></el-table-column>
                      <el-table-column prop="num" label="点击量" align="center"></el-table-column>
@@ -110,25 +110,45 @@
                  </el-table>
              </el-tab-pane>
              <el-tab-pane label="发布失败" name="fifth">
-                 <el-table size="small" current-row-key="id" :data="failDataList" stripe highlight-current-row>
-                     <el-table-column type="index" align="center" label="序号"></el-table-column>
-                     <el-table-column prop="title" label="标题" align="center"></el-table-column>
-                     <el-table-column prop="num" label="点击量" align="center"></el-table-column>
-                     <el-table-column label="状态" align="center">
-                         <template slot-scope="scope">
-                             <span>发布失败</span>
-                         </template>
-                     </el-table-column>
-                     <el-table-column prop="pubTime" label="发布时间" align="center"></el-table-column>
-                     <el-table-column prop="category" label="所属类别" align="center"></el-table-column>
-                     <el-table-column label="操作" align="center">
-                         <template slot-scope="scope">
-                             <el-button type="primary" size="mini" @click="handleVisit(scope.row)">查看</el-button>
-                             <el-button size="mini" type="danger" @click="handleDelete(scope.row)">删除</el-button>
-                         </template>
-                     </el-table-column>
-                 </el-table>
-             </el-tab-pane>
+             <el-table size="small" current-row-key="id" :data="failList" stripe highlight-current-row>
+                 <el-table-column type="index" align="center" label="序号"></el-table-column>
+                 <el-table-column prop="title" label="标题" align="center"></el-table-column>
+                 <el-table-column prop="num" label="点击量" align="center"></el-table-column>
+                 <el-table-column label="状态" align="center">
+                     <template slot-scope="scope">
+                         <span>发布失败</span>
+                     </template>
+                 </el-table-column>
+                 <el-table-column prop="pubTime" label="发布时间" align="center"></el-table-column>
+                 <el-table-column prop="category" label="所属类别" align="center"></el-table-column>
+                 <el-table-column label="操作" align="center">
+                     <template slot-scope="scope">
+                         <el-button type="primary" size="mini" @click="handleVisit(scope.row)">查看</el-button>
+                         <el-button size="mini" type="danger" @click="handleDelete(scope.row)">删除</el-button>
+                     </template>
+                 </el-table-column>
+             </el-table>
+         </el-tab-pane>
+         <el-tab-pane label="定时发布" name="sixth">
+             <el-table size="small" current-row-key="id" :data="scheduleList" stripe highlight-current-row>
+                 <el-table-column type="index" align="center" label="序号"></el-table-column>
+                 <el-table-column prop="title" label="标题" align="center"></el-table-column>
+                 <el-table-column prop="num" label="点击量" align="center"></el-table-column>
+                 <el-table-column label="状态" align="center">
+                     <template slot-scope="scope">
+                         <span>定时发布</span>
+                     </template>
+                 </el-table-column>
+                 <el-table-column prop="pubTime" label="发布时间" align="center"></el-table-column>
+                 <el-table-column prop="category" label="所属类别" align="center"></el-table-column>
+                 <el-table-column label="操作" align="center">
+                     <template slot-scope="scope">
+                         <el-button type="primary" size="mini" @click="handleVisit(scope.row)">查看</el-button>
+                         <el-button size="mini" type="danger" @click="handleDelete(scope.row)">删除</el-button>
+                     </template>
+                 </el-table-column>
+             </el-table>
+         </el-tab-pane>
 
          </el-tabs>
          <div class="pagination-container">
@@ -151,30 +171,77 @@
             dataList:[
                 {id:25,title:'射雕用雄',num:250,status:'3',pubTime:'2019-10-25 10:22:55',category:'java'},
             ],
-            checkDataList:[
+            checkList:[
                 {id:25,title:'西游记',num:250,status:'1',pubTime:'2019-10-25 10:22:55',category:'java'},
             ],
-            finishDataList:[
+            finishList:[
                 {id:25,title:'红楼梦',num:250,status:'2',pubTime:'2019-10-25 10:22:55',category:'java'},
             ],
-            draftsDataList:[
+            draftsList:[
                 {id:25,title:'三国演义',num:250,status:'3',pubTime:'2019-10-25 10:22:55',category:'java'},
             ],
-            failDataList:[
+            failList:[
+                {id:25,title:'水浒传',num:250,status:'4',pubTime:'2019-10-25 10:22:55',category:'java'},
+            ],
+            scheduleList:[
                 {id:25,title:'水浒传',num:250,status:'4',pubTime:'2019-10-25 10:22:55',category:'java'},
             ],
             pagination: {//分页相关模型数据
                 currentPage: 1,//当前页码
-                pageSize:10,//每页显示的记录数
+                pageSize:8,//每页显示的记录数
                 total:0,//总记录数
                 queryString:null//查询条件
             },
+
+            mark:1
         },
+
+        created(){
+            // 查看全部文章
+            let param = {
+                currentPage:this.pagination.currentPage,
+                pageSize:this.pagination.pageSize,
+                total:this.pagination.total,
+                queryString:this.pagination.queryString
+            };
+
+            axios.post("/article/findAllByPage.do",param).then((res)=>{
+                this.dataList = res.data.rows ;
+                this.pagination.total = res.data.total
+            })
+        },
+
         methods: {
+
+            findPage(){
+                let param = {
+                    currentPage:this.pagination.currentPage,
+                    pageSize:this.pagination.pageSize,
+                    queryString:this.pagination.queryString
+                } ;
+
+                axios.post("/article/findAllByPage.do",param).then((res)=>{
+                    if(this.mark === 1){
+                        this.dataList = res.data.rows ;
+                    } else if (this.mark === 2){
+                        this.checkList = res.data.rows;
+                    }else if (this.mark === 3){
+                        this.finishList = res.data.rows ;
+                    }else if (this.mark === 4){
+                        this.draftsList = res.data.rows ;
+                    }else if (this.mark === 5){
+                        this.failList = res.data.rows ;
+                    }else if (this.mark === 6){
+                        this.scheduleList = res.data.rows ;
+                    }
+
+                    this.pagination.total = res.data.total
+                })
+            },
 
             // 查看文章
             handleVisit(row){
-                window.location.href='article-detail.html?id='+row.id
+                window.location.href='/pages/article/article-detail.html?id='+row.id
             },
 
             // 删除文章
@@ -182,14 +249,39 @@
 
             },
 
+            // 切换不同模块时的动作
+            handle(status){
+                alert(status)
+            },
+
             // 标签页需要的函数
             handleClick(tab, event) {
+                if(tab.name === 'second'){
+                    this.pagination.queryString = 1;
+                    this.mark=2;
+                } else if (tab.name === 'first'){
+                    this.pagination.queryString = null;
+                    this.mark=1;
+                }else if (tab.name === 'third'){
+                    this.pagination.queryString = 2;
+                    this.mark=3;
+                }else if (tab.name === 'fourth'){
+                    this.pagination.queryString = 3;
+                    this.mark=4;
+                }else if (tab.name === 'fifth'){
+                    this.pagination.queryString = 4 ;
+                    this.mark=5;
+                }else if (tab.name === "sixth"){
+                    this.pagination.queryString = 5 ;
+                    this.mark=6;
+                }
+                this.findPage();
 
             },
             // 切换页码
             handleCurrentChange:function(currentPage) {
                 this.pagination.currentPage = currentPage;
-                this.findPage();
+                this.findPage()
             },
         }
     })
